--- a/login.html
+++ b/login.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    *::selection {
+      background-color: #913D02;
+    }
+
     body {
       margin: 0;
       height: 100vh;
