--- a/1.html
+++ b/1.html
@@ -24,7 +24,6 @@
       height: 104px;
       background-image: url("./images/bar.png");
       background-repeat: repeat;
-      /* object-fit: cover; */
       z-index: 1000;
     }
 
@@ -59,23 +58,9 @@
       align-items: center;
       flex-direction: column;
       position: relative;
-      /* padding-top: 25px; */
       min-height: calc(100vh - 104px);
     }
 
-    .left-bottom-cloud {
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      max-width: 35vw;
-    }
-
-    .right-bottom-cloud {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      max-width: 35vw;
-    }
 
     .logo {
       max-width: 350px;
@@ -175,6 +160,14 @@
         right: -30px;
         top: 20px;
         width: 140px;
+      }
+
+      .login-button {
+        background-size: 280px 50px;
+        width: 280px;
+        height: 50px;
+        color: #E9C26E;
+        font-size: 24px;
       }
     }
   </style>
