--- a/4.html
+++ b/4.html
@@ -72,6 +72,7 @@
       flex-direction: column;
       position: relative;
       min-height: calc(100vh - 104px);
+      overflow-x: hidden;
     }
 
     .light-card-container {
@@ -93,7 +94,7 @@
       display: flex;
       flex-direction: column;
       width: 60%;
-      padding: 0 20px;
+      padding-left: 20px;
     }
 
     .light-card-info-detail {
@@ -140,7 +141,7 @@
       }
 
       .light-card-info {
-        padding: 0 10px;
+        padding-left: 10px;
       }
 
       .light-card-info-title {
