--- a/1.html
+++ b/1.html
@@ -59,6 +59,7 @@
       flex-direction: column;
       position: relative;
       min-height: calc(100vh - 104px);
+      overflow-x: hidden;
     }
 
 
