--- a/3.html
+++ b/3.html
@@ -58,15 +58,15 @@
     .page-root {
       position: relative;
       background-image: url("./images/left-bottom-cloud.png"),
+        url("./images/right-bottom-cloud.png"),
         url("./images/left-top-flower.png"),
         url("./images/left-flower.png"),
         url("./images/right-flower.png"),
-        url("./images/right-bottom-flower.png"),
-        url("./images/charm.png");
-      background-attachment: fixed, fixed, fixed, fixed, fixed;
-      background-position: left bottom, left 50px, 100px 500px, right 300px, right 100px bottom, right 50px top;
+        url("./images/right-bottom-flower.png");
+      background-attachment: fixed, fixed, fixed, fixed, fixed, fixed;
+      background-position: left bottom, right bottom, left 50px, 100px 500px, right 300px, right 100px bottom;
       background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
-      background-size: 20vw, 100px, 100px, 80px, 100px, auto 90vh;
+      background-size: 30vw, 30vw, 100px, 100px, 80px, 100px;
 
       display: flex;
       align-items: center;
@@ -76,52 +76,49 @@
       overflow-x: hidden;
     }
 
-    .light-card-container {
-      width: 800px;
-      max-width: 90vw;
+    .temple-search-container {
+      width: 350px;
     }
 
-    .light-card {
-      /* width: 800px; */
-      padding: 20px;
-      display: flex;
+    .search-input-container {
+      padding-top: 40px;
+      border: none;
+      border-bottom: #943F01 1px solid;
+      padding-bottom: 2px;
     }
 
-    .light-card-image {
-      width: 40%;
+    .search-input {
+      width: 100%;
+      border: none;
+      border-bottom: #943F01 2px solid;
+      background: none;
+      padding: 0;
+      font-size: 24px;
     }
 
-    .light-card-info {
-      display: flex;
-      flex-direction: column;
-      width: 60%;
-      padding-left: 20px;
+    .search-input:focus-visible {
+      outline: none;
     }
 
-    .light-card-info-title>span {
+    .region1 {
+      text-align: center;
+      letter-spacing: 5px;
+    }
+
+    .region2 {
+      text-align: center;
+      letter-spacing: 5px;
+    }
+
+    .back-button {
+      border: none;
       font-size: 18px;
       background: url("./images/title-border.png") no-repeat;
       background-size: 100% 100%;
-      width: auto;
-      height: 24px;
+      /* width: auto; */
       color: #8D310F;
       font-weight: bold;
-      padding: 5px 10px;
-    }
-
-    .light-card-info-detail {
-      padding-top: 10px;
-      font-size: 16px;
-    }
-
-    .go-light-up {
-      border: none;
-      background: url("./images/go-light-up-button.png") no-repeat;
-      background-size: 128px 36px;
-      width: 128px;
-      height: 36px;
-      color: #E9C26E;
-      font-size: 18px;
+      padding: 5px 30px;
     }
 
     @media (max-width: 575.98px) {
@@ -136,48 +133,9 @@
         background-position: left 50px, 100px 500px, right 300px, right 100px bottom;
         background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
         background-size: 100px, 100px, 80px, 100px;
-
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        position: relative;
-        min-height: calc(100vh - 104px);
       }
 
-      .light-card-container {
-        max-width: 100vw;
-      }
 
-      .light-card {
-        padding: 10px;
-      }
-
-      .light-card-info {
-        padding-left: 10px;
-      }
-
-      .light-card-info-title>span {
-        font-size: 14px;
-      }
-
-      .light-card-info-detail {
-        padding-top: 5px;
-        font-size: 12px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        line-clamp: 3;
-        -webkit-box-orient: vertical;
-      }
-
-      .go-light-up {
-        background-size: 75px 24px;
-        width: 75px;
-        height: 24px;
-        color: #E9C26E;
-        font-size: 14px;
-      }
     }
   </style>
 </head>
@@ -185,33 +143,67 @@
 <body>
 
   <header class="header">
-    <div class="header-title">線上點燈</div>
+    <div class="header-title">寺廟</div>
   </header>
   <main id="app">
 
     <div class="page-root">
-      <div class="light-card-container">
+      <div class="temple-search-container">
+        <div class="search-input-container">
+          <input type="text" class="search-input">
+        </div>
+        <div
+          style="height: 100px;display: flex;justify-content: center;align-items: center;font-weight: bold;font-size: 24px;">
+          <span>地　區</span>
+        </div>
+        <div style="padding: 30px 0;;height: 300px;display:flex;">
 
-        <div class="light-card" v-for="i in 10">
-          <div class="light-card-image">
-            <img src="./images/image-border.png" alt="image-border"
-              style="width: 100%; background: url(./images/dd.png) no-repeat;background-size: contain;">
+          <div style="width: 100%;margin:0 20px;font-weight: bold;font-size: 24px;">
+            <div class="region1">
+              美國
+            </div>
+            <div class="region1">
+              韓國
+            </div>
+            <div class="region1">
+              中國
+            </div>
+            <div class="region1">
+              中國香港
+            </div>
+            <div class="region1">
+              中國台灣
+            </div>
+            <div class="region1">
+              中國澳門
+            </div>
           </div>
-          <div class="light-card-info">
-            <div class="light-card-info-title">
-              <span>藥師燈</span>
-
+          <div style="border:black 1px solid;width: 0px;"></div>
+          <div style="width: 100%;margin:0 20px;font-weight: bold;font-size: 24px;">
+            <div class="region2">
+              基隆市
             </div>
-            <div class="light-card-info-detail">
-              藥師佛的介紹： 藥師佛，就是藥師琉璃光如來，他所化生的，是東方琉璃世界。藥師佛在行菩薩道時，曾發十二大願。第一大願：我成佛果位時，自身光明．．．
+            <div class="region2">
+              新北市
             </div>
-            <div style="margin-top:auto;text-align: right;">
-              <button class="go-light-up">前往點燈</button>
+            <div class="region2">
+              台北市
+            </div>
+            <div class="region2">
+              桃園市
+            </div>
+            <div class="region2">
+              新竹縣
+            </div>
+            <div class="region2">
+              新竹市
             </div>
           </div>
         </div>
+        <div style="text-align: center;">
+          <button class="back-button">回上一頁</button>
+        </div>
       </div>
-
     </div>
   </main>
 
@@ -228,7 +220,7 @@
         };
       },
       methods: {
-        clear: function () {
+        clear1: function () {
         },
 
       },
