--- a/4.html
+++ b/4.html
@@ -163,12 +163,12 @@
       .light-card-info-detail {
         padding-top: 5px;
         font-size: 12px;
-        overflow: hidden;
+        /* overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
         -webkit-line-clamp: 3;
         line-clamp: 3;
-        -webkit-box-orient: vertical;
+        -webkit-box-orient: vertical; */
       }
 
       .go-light-up {
