--- a/1.html
+++ b/1.html
@@ -302,9 +302,9 @@
 
       </div>
       <div class="dividing-container">
-        <div class="dividing-line col"></div>
+        <div class="dividing-line"></div>
         <span class="dividing-text">其他登錄方式</span>
-        <div class="dividing-line col"></div>
+        <div class="dividing-line"></div>
       </div>
 
 
