--- a/2.html
+++ b/2.html
@@ -27,6 +27,9 @@
       margin: 0;
       height: 100vh;
       background-color: #E9E3DB;
+      display: flex;
+      height: 100vh;
+      flex-direction: column;
     }
 
     .header {
@@ -50,8 +53,8 @@
 
     main {
       padding-top: 104px;
-      /* padding-bottom: 60px; */
-      /* min-height: calc(100vh - 104px + 60px); */
+      padding-bottom: 65px;
+      flex-basis: 100%;
     }
 
     .root {
@@ -70,7 +73,7 @@
       align-items: center;
       flex-direction: column;
       position: relative;
-      min-height: calc(100vh - 104px);
+      /* min-height: calc(100vh - 104px); */
       overflow-x: hidden;
     }
 
@@ -126,6 +129,7 @@
     .button-group {
       display: flex;
       justify-content: space-around;
+      padding: 10px 0;
     }
 
     .footer-menu-container {
@@ -134,7 +138,7 @@
       width: 100%;
       display: flex;
       justify-content: center;
-      height: 60px;
+      height: 65px;
     }
 
     .footer-menu {
@@ -142,6 +146,37 @@
       justify-content: center;
       max-width: 1000px;
       width: 100%;
+    }
+
+    .footer-menu-item {
+      width: 25%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #E9E3DB;
+      color: #603812;
+      font-weight: bold;
+      font-size: 20px;
+      border-top: #000000 1px solid;
+      border-left: #000000 1px solid;
+      cursor: pointer;
+      /* border-right: #000000 0.5px solid; */
+    }
+
+    .footer-menu> :last-child {
+      border-right: #000000 1px solid;
+    }
+
+    .footer-menu-img1 {
+      width: 60px;
+    }
+
+    .footer-menu-img2 {
+      width: 40px;
+    }
+
+    .footer-menu-item>span {
+      margin-left: 10px;
     }
 
     @media (max-width: 575.98px) {
@@ -159,16 +194,11 @@
       }
 
       .temple-container {
-        /* max-width: 1000px; */
         margin: 0 10px;
       }
 
       .dividing-text {
-        /* font-weight: bold;
-      text-align: center;
-      letter-spacing: 0px;*/
         padding: 0 10px;
-        /* font-size: 18px; */
       }
 
       .carousel-container {
@@ -178,8 +208,6 @@
 
       .button-group {
         flex-direction: column;
-        /* justify-content: space-around; */
-        /* justify-content: center; */
         align-items: center;
       }
 
@@ -190,6 +218,27 @@
 
       .login-button {
         margin: 10px;
+      }
+
+      .footer-menu-item {
+        flex-direction: column;
+        font-size: 14px;
+      }
+
+      .footer-menu-img1 {
+        height: 25px;
+        width: auto;
+      }
+
+      .footer-menu-img2 {
+        /* width: 30px; */
+        height: 25px;
+        width: auto;
+      }
+
+      .footer-menu-item>span {
+        margin-top: 5px;
+        margin-left: 0;
       }
     }
   </style>
@@ -257,10 +306,22 @@
   </main>
   <footer class="footer-menu-container">
     <div class="footer-menu">
-      <div>寺廟介紹</div>
-      <div>我的明燈</div>
-      <div>活動信息</div>
-      <div>寺廟介紹</div>
+      <div class="footer-menu-item">
+        <img src="./images/寺廟介紹.png" alt="寺廟介紹" class="footer-menu-img1">
+        <span>寺廟介紹</span>
+      </div>
+      <div class="footer-menu-item">
+        <img src="./images/我的明燈.png" alt="我的明燈" class="footer-menu-img1">
+        <span>我的明燈</span>
+      </div>
+      <div class="footer-menu-item">
+        <img src="./images/活動信息.png" alt="活動信息" class="footer-menu-img2">
+        <span>活動信息</span>
+      </div>
+      <div class="footer-menu-item">
+        <img src="./images/會員專區.png" alt="會員專區" class="footer-menu-img2">
+        <span>會員專區</span>
+      </div>
     </div>
   </footer>
   <script>
