--- a/5.html
+++ b/5.html
@@ -248,7 +248,7 @@
 <body>
 
   <header class="header">
-    <div class="header-title">寺廟</div>
+    <div class="header-title">線上點燈</div>
   </header>
   <main id="app">
 
@@ -256,9 +256,9 @@
       <div class="temple-container">
         <div class="dividing-container">
           <div class="dividing-line" style="margin-right: 15px;"></div>
-          <img src="./images/left.png" alt="left" style="cursor: pointer;">
-          <span class="dividing-text">文玄禪寺</span>
-          <img src="./images/right.png" alt="right" style="cursor: pointer;">
+          <!-- <img src="./images/left.png" alt="left" style="cursor: pointer;"> -->
+          <span class="dividing-text">藥師燈</span>
+          <!-- <img src="./images/right.png" alt="right" style="cursor: pointer;"> -->
           <div class="dividing-line" style="margin-left: 15px;"></div>
         </div>
 
@@ -276,7 +276,9 @@
           </div>
         </div>
 
-        <div style="display: flex;padding: 5px 0;">
+        <!-- <div style="font-weight: bold;font-size: 18px;padding: 0 10px;margin-top: 5px;min-width: 75px;">點燈服務</div> -->
+
+        <!-- <div style="display: flex;padding: 5px 0;">
           <div style="font-weight: bold;font-size: 18px;padding: 0 10px;min-width: 75px;">初步地址</div>
           <div style="font-weight: bold;font-size: 18px;padding: 0 10px;">台中市西屯區中清路二中清路二段135號</div>
         </div>
@@ -295,7 +297,7 @@
           （二）每周三、四整日，僧人唸誦普賢行《文玄企業》 （一）線上點燈，瞬間尋燈。 點燈註冊後，立即可以在手機尋得自己註明的燈位。
           （二）每周三、四整日，僧人唸誦普賢行《文玄企業》 （一）線上點燈，瞬間尋燈。 點燈註冊後，立即可以在手機尋得自己註明的燈位。 （二）每周三、四整日，僧人唸誦普賢行《文玄企業》 （一）線上點燈，瞬間尋燈。
           點燈註冊後，立即可以在手機尋得自己註明的燈位。 （二）每周三、四整日，僧人唸誦普賢行《文玄企業》 （一）線上點燈，瞬間尋燈。 點燈註冊後，立即可以在手機尋得自己註明的燈位。 （二）每周三、四整日，僧人唸誦普賢行
-        </div>
+        </div> -->
 
         <div class="button-group">
           <button class="login-button">在線點燈</button>
